
syntax = "proto3";

option java_multiple_files = true;
option java_package = "grpc.generated.helloworld";
option java_outer_classname = "HelloWorldServiceImpl";


package helloworld;

// The greeting service definition.
service Greeter {
    // Sends a greeting
    rpc SayHello (HelloRequest) returns (HelloReply) {}
    // Says Goodbye
    rpc SayGoodbye (GoodbyeRequest) returns (GoodbyeResponse) {}
    // Says lots of goodbyes
    rpc LotsOfGoodByes (GoodbyeRequest) returns (stream GoodbyeResponse) {}
}

// The request message containing the user's name.
message HelloRequest {
    string name = 1;
}

// The response message containing the greetings
message HelloReply {
    string message = 1;
}

// The request message containing the user's name.
message GoodbyeRequest {
    string name = 1;
}

// The response message containing the greetings
message GoodbyeResponse {
    string message = 1;
    int32 numChar = 2;
}